--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .App{
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   height: max-content;
   position: relative;
